crates/aura-macros/tests/boundaries/semantic_owner_missing_category.stderr
error: semantic_owner requires `category = "move_owned"`
  --> tests/boundaries/semantic_owner_missing_category.rs:7:1
   |
 7 | / #[aura_macros::semantic_owner(
 8 | |     owner = "demo-owner",
 9 | |     terminal = "publish_done",
10 | |     postcondition = "demo_done",
...  |
13 | |     child_ops = ""
14 | | )]
   | |__^
   |
   = note: this error originates in the attribute macro `aura_macros::semantic_owner` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused imports: `OperationContext` and `TraceContext`
 --> tests/boundaries/semantic_owner_missing_category.rs:1:17
  |
1 | use aura_core::{OperationContext, TraceContext};
  |                 ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
